# GeekTVClient

./: .gitignore  CMakeLists.txt  README.md  control_panel.cpp  control_panel.h  control_panel.ui  geektv_constants.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  movie.cpp  movie.h  movie_search_widget.cpp  movie_search_widget.h  movie_search_widget.ui  player_window.cpp  player_window.h  player_window.ui  resource.qrc
CMake/: FindQtAV.cmake
